New UI optimised

--- a/app/src/main/res/layout/activity_add_licence.xml
+++ b/app/src/main/res/layout/activity_add_licence.xml
@@ -137,7 +137,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="16dp"
                             android:background="@color/colorAccent"
-                            android:text="@string/action_vehicle_type"
+                            android:text="Add Licence Type"
                             android:textColor="@android:color/white"
                             android:textStyle="bold"/>
 
