--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                 xmlns:tools="http://schemas.android.com/tools"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="match_parent"
-                                                 android:fitsSystemWindows="true"
-                                                 android:background="@drawable/diagnoal"
-                                                 tools:context="com.fusecoords.drivedroid.Authority.LoginActivity">
+<android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:background="@drawable/diagnoal"
+        android:fitsSystemWindows="true"
+        tools:context="com.fusecoords.drivedroid.Authority.ResetPasswordActivity">
     <android.support.v7.widget.CardView
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+    >
         <LinearLayout
+                android:minWidth="300dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:minWidth="300dp"
                 android:orientation="vertical"
                 android:padding="@dimen/activity_horizontal_margin">
 
@@ -24,19 +26,31 @@
                     android:layout_width="@dimen/logo_w_h"
                     android:layout_height="@dimen/logo_w_h"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="30dp"
+                    android:layout_marginBottom="10dp"
                     android:src="@drawable/launcher_icon"/>
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:padding="5dp"
+                    android:text="Change Password"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="20dp"/>
+
 
             <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                 <EditText
-                        android:id="@+id/email"
+                        android:id="@+id/pass"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
-                        android:hint="@string/hint_email"
+                        android:layout_marginTop="20dp"
+                        android:hint="@string/hint_password"
                         android:inputType="textEmailAddress"
                         android:textColor="@android:color/black"
                         android:textColorHint="@android:color/black"/>
@@ -47,12 +61,13 @@
                     android:layout_height="wrap_content">
 
                 <EditText
-                        android:id="@+id/password"
-                        android:layout_width="fill_parent"
+                        android:id="@+id/repass"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
-                        android:hint="@string/hint_password"
-                        android:inputType="textPassword"
+                        android:layout_marginTop="20dp"
+                        android:hint="@string/hint_repassword"
+                        android:inputType="textEmailAddress"
                         android:textColor="@android:color/black"
                         android:textColorHint="@android:color/black"/>
             </android.support.design.widget.TextInputLayout>
@@ -60,36 +75,15 @@
             <!-- Login Button -->
 
             <Button
-                    android:id="@+id/btn_login"
+                    android:id="@+id/btn_reset_password"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dip"
-                    android:background="@color/colorPrimaryDark"
-                    android:text="@string/btn_login"
+                    android:background="@color/colorAccent"
+                    android:text="Change Password"
                     android:textColor="@android:color/white"/>
 
-            <Button
-                    android:id="@+id/btn_reset_password"
-                    android:layout_width="fill_parent"
-                    android:layout_height="30dp"
-                    android:layout_marginTop="10dip"
-                    android:background="@null"
-                    android:text="@string/btn_forgot_password"
-                    android:textAllCaps="false"
-                    android:textColor="@color/colorPrimaryDark"/>
 
-            <!-- Link to Login Screen -->
-
-            <Button
-                    android:id="@+id/btn_signup"
-                    android:layout_width="fill_parent"
-                    android:layout_height="45dp"
-                    android:layout_marginTop="10dip"
-                    android:background="@null"
-                    android:text="@string/btn_link_to_register"
-                    android:textAllCaps="false"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="15dp"/>
             <ProgressBar
                     android:id="@+id/progressBar"
                     android:layout_width="30dp"
