--- a/app/src/main/res/layout/activity_cust_dashboard.xml
+++ b/app/src/main/res/layout/activity_cust_dashboard.xml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".Customer.CustDashboard">
+    <android.support.v7.widget.Toolbar
+            android:id="@+id/my_toolbar"
+            android:layout_width="match_parent"
+            app:title="Welcome to E-Fine"
+            app:titleTextColor="@color/white"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp">
+        <ImageView
+                android:layout_gravity="right"
+                android:src="@drawable/logout"
+                android:padding="18dp"
+                android:id="@+id/sign_out"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:background="@null"/>
+
+    </android.support.v7.widget.Toolbar>
     <ScrollView android:layout_height="wrap_content"
                 android:layout_width="match_parent">
         <LinearLayout
@@ -281,17 +300,73 @@
 
             </LinearLayout>
 
-
-            <Button
-                    android:id="@+id/sign_out"
-                    style="?android:textAppearanceSmall"
-                    android:layout_width="match_parent"
+            <LinearLayout
+                    android:layout_marginLeft="10dp"
+                    android:orientation="horizontal"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:background="@color/colorPrimary"
-                    android:text="@string/btn_sign_out"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"/>
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_width="match_parent">
+                <android.support.v7.widget.CardView
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content">
+                    <LinearLayout
+                            android:padding="10dp"
+                            android:id="@+id/changePass"
+                            android:gravity="center"
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                        <ImageView android:layout_width="50dp"
+                                   android:layout_height="50dp"
+                                   android:padding="10dp"
+                                   android:src="@drawable/key"/>
+                        <TextView
+                                android:layout_marginTop="10dp"
+                                style="?android:textAppearanceSmall"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Change Password"
+                                android:textColor="@color/colorPrimaryDark"
+                                android:textStyle="bold"/>
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:clickable="true"
+                        android:layout_marginLeft="10dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content">
+                    <LinearLayout
+                            android:padding="10dp"
+                            android:id="@+id/updateProfile"
+                            android:gravity="center"
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                        <ImageView android:layout_width="50dp"
+                                   android:padding="10dp"
+                                   android:layout_height="50dp"
+                                   android:src="@drawable/resume"/>
+                        <TextView
+                                android:layout_marginTop="10dp"
+                                style="?android:textAppearanceSmall"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Update Profile"
+                                android:textColor="@color/colorPrimaryDark"
+                                android:textStyle="bold"/>
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+
+            </LinearLayout>
+
+
         </LinearLayout>
     </ScrollView>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
