--- a/app/src/main/res/layout/activity_pay_fine.xml
+++ b/app/src/main/res/layout/activity_pay_fine.xml
@@ -4,9 +4,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
         android:padding="@dimen/activity_horizontal_margin"
-        android:background="@color/colorPrimary"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:context=".Authority.PayFine">
 
 
@@ -21,9 +20,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:hint="@string/hint_vehicle_licence"
-                android:inputType="textEmailAddress"
-                android:textColor="@android:color/white"
-                android:textColorHint="@android:color/white"/>
+                android:inputType="text"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"/>
 
     </android.support.design.widget.TextInputLayout>
     <Button
@@ -34,7 +33,7 @@
             android:layout_marginTop="16dp"
             android:background="@color/colorAccent"
             android:text="@string/btn_scan"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textStyle="bold"/>
 
 
@@ -46,7 +45,7 @@
             android:layout_marginTop="16dp"
             android:background="@color/colorAccent"
             android:text="@string/btn_no_licence"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textStyle="bold"/>
 
 
@@ -58,6 +57,6 @@
             android:layout_marginTop="16dp"
             android:background="@color/colorAccent"
             android:text="@string/btn_proceed"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textStyle="bold"/>
 </LinearLayout>
