--- a/app/src/main/res/layout/activity_view_alert.xml
+++ b/app/src/main/res/layout/activity_view_alert.xml
@@ -15,10 +15,10 @@
             tools:context=".MapsActivity"
             android:name="com.google.android.gms.maps.SupportMapFragment"/>
 
-    <android.support.v4.view.ViewPager
+    <com.fusecoords.drivedroid.Customer.CustomViewPager
             android:id="@+id/pager"
             android:layout_gravity="bottom"
             android:layout_width="match_parent"
-            android:layout_height="150dp"/>
+            android:layout_height="wrap_content"/>
 
 </FrameLayout>
