--- a/app/src/main/res/layout/item_vehicle.xml
+++ b/app/src/main/res/layout/item_vehicle.xml
@@ -239,14 +239,25 @@
 
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
+        <View
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/light_gray"/>
+
         <LinearLayout
-                android:padding="10dp"
+                android:paddingBottom="10dp"
+                android:paddingRight="10dp"
+                android:paddingLeft="10dp"
                 android:id="@+id/expand"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
             <Button
+                    android:drawablePadding="5dp"
+                    android:drawableLeft="@android:drawable/ic_menu_gallery"
                     style="?android:textAppearanceSmall"
                     android:background="@null"
                     android:textColor="@android:color/black"
@@ -257,6 +268,8 @@
                     android:text="Registration"
                     android:layout_height="30dp"/>
             <Button
+                    android:drawablePadding="5dp"
+                    android:drawableLeft="@android:drawable/ic_menu_gallery"
                     style="?android:textAppearanceSmall"
                     android:background="@null"
                     android:textColor="@android:color/black"
@@ -267,7 +280,8 @@
                     android:text="Taxation"
                     android:layout_height="30dp"/>
             <Button
-
+                    android:drawablePadding="5dp"
+                    android:drawableLeft="@android:drawable/ic_menu_gallery"
                     style="?android:textAppearanceSmall"
                     android:background="@null"
                     android:textColor="@android:color/black"
@@ -278,7 +292,8 @@
                     android:text="PUC"
                     android:layout_height="30dp"/>
             <Button
-
+                    android:drawablePadding="5dp"
+                    android:drawableLeft="@android:drawable/ic_menu_gallery"
                     style="?android:textAppearanceSmall"
                     android:background="@null"
                     android:textColor="@android:color/black"
